fix for Compare Window actions buttons alignment

--- a/skin/frontend/mbootstrap/default/scss/_compare.scss
+++ b/skin/frontend/mbootstrap/default/scss/_compare.scss
@@ -17,4 +17,9 @@
         .price-box {
             margin: ($line-height-computed / 2) 0;
         }
+
+        .add-to-cart,
+        .add-to-links {
+            display: inline-block;
+        }
     }
